--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <video autoplay muted loop id="background-video">
-        <source src="Melhores momentos de Rapunzel e Flynn ｜ Disney Princesa.mp4" type="video/mp4">
+        <source src="Melhores momentos de Rapunzel e Flynn  Disney Princesa.mp4" type="video/mp4">
         Seu navegador não suporta vídeos HTML5.
     </video>
     <audio id="music" loop>
